# otoko

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  package.json  pnpm-lock.yaml  prettier.config.js
.github/workflows/: publish.yml
app/: index.html  package.json  tsconfig.json  unocss.config.ts  vite.config.ts
app/src/: App.tsx  bindings.ts  files.ts  index.tsx  localStorage.ts  query.tsx  types.ts
app/src-tauri/: Cargo.toml  dev.db  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs  prisma.rs  routes.rs  startup.rs
app/src/components/: BackButton.tsx  Cover.tsx  FillImage.tsx  SearchField.tsx  TopicList.tsx  View.tsx
app/src/sources/: index.ts  leerManga.ts  onlineManga.ts  sources.ts  types.ts  utilts.ts
app/src/store/: issues.ts  sources.ts  stack.ts  topics.ts
app/src/views/: Home.tsx  ReadIssue.tsx  Search.tsx  Topic.tsx  index.ts
crates/prisma-cli/: Cargo.toml
prisma/: dev.db-journal  schema.prisma
prisma/migrations/20221211011328_init/: migration.sql
prisma/migrations/20221228001942_fix_issue_topic/: migration.sql
